# viskit

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  kNN_BruteForce.txt  requirements.txt  setup.py
QtEditor/: CMakeLists.txt  QtEditor.vcxproj.filters
QtEditor/include/: Camera.h  MainWindow.h  MainWindow.ui  OpenGLRenderer.h  ShaderLoader.h  mainwindow.ui  particleRenderer.h
QtEditor/resources/: QtEditor.qrc
QtEditor/source/: MainWindow.cpp  OpenGLRenderer.cpp  Shader.cpp  ShaderProgram.cpp  TextureLoader.cpp  main.cpp
ivhd/QtEditor/: CMakeLists.txt  QtEditor.vcxproj  QtEditor.vcxproj.filters
ivhd/QtEditor/Forms/: QtEditor.ui  mainwindow.ui
ivhd/QtEditor/include/: Camera.h  Camera3D.h  IRenderer.h  MainWindow.h  OpenGLRenderer.h  QtEditor.h  RendererFactory.h  Shader.h  ShaderLoader.h  ShaderProgram.h  TextureLoader.h  color.h  config.h  consts.h  glParticleRenderer.h  glwidget.h  letters.h  matrix.h  rgl.h  tools.h  transform.h  transform3d.h  vector3d.h  vertex.h
ivhd/QtEditor/shaders/: fragmentShader.frag  vertexShader.glsl  vertexShader.vert
ivhd/QtEditor/source/: Camera3D.cpp  MainWindow.cpp  OpenGLRenderer.cpp  QtEditor.cpp  Shader.cpp  ShaderLoader.cpp  color.cpp  config.cpp  glParticleRenderer.cpp  glwidget.cpp  main.cpp  rgl.cpp  tools.cpp  transform3d.cpp  vector3d.cpp
ivhd/QtEditor/style/: MaterialDark.qss
ivhd/libivhd/: CMakeLists.txt  libivhd.vcxproj  libivhd.vcxproj.filters
ivhd/libivhd/source/: libivhd.cpp
ivhd/libivhd_tests/: CMakeLists.txt  MNIST7k.graph  TestUtils.h  libivhd_tests.vcxproj  libivhd_tests.vcxproj.filters  utils.h
ivhd/libivhd_tests/core/: LoggerTest.cpp
ivhd/libivhd_tests/embed/: CasterTest.cpp
ivhd/libivhd_tests/graph/: GraphTest.cpp  KDTreeTest.cpp
ivhd/libivhd_tests/ivhd/: InteractiveVisualizationBuilderTest.cpp
ivhd/libivhd_tests/particles/: ParticleData.cpp
ivhd/libivhd_tests/threading/: ThreadPoolTest.cpp
ivhd/libivhd_tests/utils/: DistanceCalculatorTest.cpp
ivhd_cuda_standalone/: CMakeLists.txt  ivhd_cuda_standalone.cpp
libivhd/: CMakeLists.txt  libivhd.vcxproj.filters
libivhd/include/core/: System.h
libivhd/include/facade/: FacadeCaster.h  FacadeCasterForceDirected.h  FacadeCasterMomentum.h  FacadeCasterSGD.h  FacadeGraph.h  FacadeGraphGenerator.h  FacadeGraphGeneratorBruteForce.h  FacadeGraphGeneratorFaiss.h  FacadeGraphGeneratorKDTree.h  FacadeInteractiveVisualization.h  FacadeMath.h  FacadeParserCSV.h  FacadeParticleSystem.h  FacadeResourceCollection.h  FacadeResourceFactory.h
libivhd/include/graph/: Graph.h
libivhd/include/ivhd/: ICaster.h  ICasterDpd.h  IClusterer.h  IGpuCaster.h  IGpuResourceFactory.h  IGraph.h  IInteractiveVisualization.h  IParticleSystem.h  IReducer.h  IResourceCollection.h  IResourceFactory.h  ITransformer.h  InteractiveVisualizationBuilder.h  Math.h  ResourceCollection.h  ResourceCollection.inl  Structures.h
libivhd/include/math/: IvhdMath.h
libivhd/include/parse/: Parser.h
libivhd_cuda/: CMakeLists.txt
libivhd_cuda/include/: Clock.h  caster_factory.h  constants.h  distance.h
libivhd_tests/: CMakeLists.txt  libivhd_tests.vcxproj.filters
libivhd_tests/embed/: CasterTest.cpp
libivhd_tests/graph/: FaissTest.cpp  GraphTest.cpp
libivhd_tests/ivhd/: InteractiveVisualizationBuilderTest.cpp
libivhd_tests/threading/: ThreadPoolTest.cpp
libviskit/: CMakeLists.txt
libviskit_tests/: CMakeLists.txt  TestUtils.h  ViskitTest.h
libviskit_tests/core/: LoggerTest.cpp
libviskit_tests/embed/: CasterTest.cpp
libviskit_tests/graph/: BruteForceTest.cpp  GraphTest.cpp  KDTreeTest.cpp  ReverseTest.cpp
libviskit_tests/ivhd/: InteractiveVisualizationBuilderTest.cpp
libviskit_tests/particles/: ParticleData.cpp
libviskit_tests/threading/: ThreadPoolTest.cpp
viskit/: CMakeLists.txt
viskit/core/: Core.cpp  Core.h  Logger.cpp  Logger.h  System.cpp  System.h
viskit/facade/: FacadeCaster.cpp  FacadeCaster.h  FacadeCasterAdadelta.cpp  FacadeCasterAdadelta.h  FacadeCasterAdam.cpp  FacadeCasterAdam.h  FacadeCasterForceDirected.cpp  FacadeCasterForceDirected.h  FacadeCasterLargeVis.cpp  FacadeCasterLargeVis.h  FacadeCasterMomentum.cpp  FacadeCasterMomentum.h  FacadeCasterNesterov.cpp  FacadeCasterNesterov.h  FacadeCasterRandom.cpp  FacadeCasterRandom.h  FacadeCasterSGD.cpp  FacadeCasterSGD.h  FacadeCasterTSNE.cpp  FacadeCasterTSNE.h  FacadeCasterUMAP.cpp  FacadeCasterUMAP.h  FacadeGraph.cpp  FacadeGraph.h  FacadeGraphGenerator.cpp  FacadeGraphGenerator.h  FacadeGraphGeneratorBruteForce.cpp  FacadeGraphGeneratorBruteForce.h  FacadeGraphGeneratorKDTree.cpp  FacadeGraphGeneratorKDTree.h  FacadeGraphGeneratorRandom.cpp  FacadeGraphGeneratorRandom.h  FacadeGraphGeneratorReverse.cpp  FacadeGraphGeneratorReverse.h  FacadeInteractiveVisualization.cpp  FacadeInteractiveVisualization.h  FacadeMath.h  FacadeParser.cpp  FacadeParser.h  FacadeParserCSV.cpp  (+5 more)
viskit/graph/: DataPoint.cpp  DataPoint.h  Graph.cpp  Graph.h
viskit/math/: IvhdMath.h  glm_adapter.h
viskit/parse/: Parser.cpp  Parser.h  ParserCSV.cpp  ParserCSV.h
viskit/particles/: ParticleData.cpp  ParticleData.h  ParticleSystem.cpp  ParticleSystem.h
viskit/python/: CMakeLists.txt  README.md  module_binder.cpp  pyproject.toml  pyviskit_offline.py
viskit/threading/: ThreadPool.cpp  ThreadPool.h
viskit/utils/: Math.h  RandomColor.cpp  RandomColor.h  TimeProfiler.cpp  TimeProfiler.h  npy.h
viskit/viskit/: DataPoint.h  ICaster.h  IClusterer.h  IGraph.h  IGraphGenerator.h  IInteractiveVisualization.h  IMetric.h  IParser.h  IParticleSystem.h  IReducer.h  IResourceFactory.h  ISetting.h  ITransformer.h  InteractiveVisualizationBuilder.cpp  InteractiveVisualizationBuilder.h  LogLevel.h  Math.h  ResourceCollection.h  ResourceCollection.inl  SettingType.h  Structures.h
viskit_experiments/: CMakeLists.txt  ivhd_rkNN.cpp
viskit_offline/: CMakeLists.txt  plot.py  viskit_offline.cpp
viskit_tests/: BruteForceTest.cpp  CMakeLists.txt  CasterTest.cpp  GraphTest.cpp  InteractiveVisualizationBuilderTest.cpp  KDTreeTest.cpp  LoggerTest.cpp  ReverseTest.cpp  TestUtils.h  ThreadPoolTest.cpp  ViskitTest.h
(+566 files in other folders)
